fixed: scrolling upwards while dragging dependency line wasn't working
this was due to the way the header is stickied at the top. The fix isn't pretty though, the way it works is by making the invisible header height 0 and pushing down the table by the height of the visible header.

--- a/src/stylesheets/vortex/supertable.scss
+++ b/src/stylesheets/vortex/supertable.scss
@@ -96,6 +96,19 @@
   }
 }
 
+.table-container .table-main-pane .xthead {
+  .table-header-cell.xth {
+    padding: 0 !important;
+    border: 0 !important;
+    > * {
+      max-height: 0 !important;
+      visibility: hidden;
+      padding: 0 !important;
+      margin-top: -100%;
+    }
+  }
+}
+
 .table-details-pane {
   // overflow-y: auto;
   padding: 0px;
